# rap_opinions

./: consistency.ipynb  process_results.ipynb  pyproject.toml
.ipynb_checkpoints/: consistency-checkpoint.ipynb
data/runs/opinions_qa:survey=Pew_American_Trends_Panel_W26,num_logprobs=10,context=default,num_train_trials=1,model=ai21_j1-grande,num_train_trials=1/: per_instance_stats.json  run_spec.json  scenario_state.json  stats.json
data/runs/opinions_qa:survey=Pew_American_Trends_Panel_W26,num_logprobs=10,context=default,num_train_trials=1,model=ai21_j1-grande-v2-beta,num_train_trials=1/: per_instance_stats.json  run_spec.json  scenario_state.json  stats.json
data/runs/opinions_qa:survey=Pew_American_Trends_Panel_W26,num_logprobs=10,context=default,num_train_trials=1,model=ai21_j1-jumbo,num_train_trials=1/: per_instance_stats.json  run_spec.json  scenario_state.json  stats.json
data/runs/opinions_qa:survey=Pew_American_Trends_Panel_W26,num_logprobs=100,context=default,num_train_trials=1,model=openai_ada,num_train_trials=1/: per_instance_stats.json  run_spec.json  scenario_state.json  stats.json
data/runs/opinions_qa:survey=Pew_American_Trends_Panel_W26,num_logprobs=100,context=default,num_train_trials=1,model=openai_davinci,num_train_trials=1/: per_instance_stats.json  run_spec.json  scenario_state.json  stats.json
data/runs/opinions_qa:survey=Pew_American_Trends_Panel_W26,num_logprobs=100,context=default,num_train_trials=1,model=openai_text-ada-001,num_train_trials=1/: per_instance_stats.json  run_spec.json  scenario_state.json  stats.json
(+598 files in other folders)
